# mcp-server-mysql

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  pyproject.toml  server.py
.github/workflows/: ci.yml  release.yml
docs/: setup.md
docs/interface/: primitives.md  transport.md
docs/security/: governance.md
examples/: claude_desktop_config.json  docker-compose.yml  enterprise_gateway_http.json
src/mysql_mcp/: __init__.py  config.py  db.py  errors.py  identifiers.py  server.py  sql_policy.py
src/mysql_mcp/services/: __init__.py  health.py  query.py  schema.py
src/mysql_mcp/tests/: conftest.py
src/mysql_mcp/tests/fixtures/: rows.py
src/mysql_mcp/tests/integration/: conftest.py  test_live_mysql.py
src/mysql_mcp/tests/unit/: test_config.py  test_db.py  test_identifiers.py  test_server.py  test_services_health.py  test_services_query.py  test_services_schema.py  test_sql_policy.py  test_tools_health.py  test_tools_query.py  test_tools_registration.py  test_tools_schema.py
src/mysql_mcp/tools/: __init__.py  _utils.py  health.py  query.py  schema.py
